load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/kubevirt/cmd/example-guest-agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/certificates/triple:go_default_library",
        "//pkg/certificates/triple/cert:go_default_library",
        "//pkg/vsock/system/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/github.com/mdlayher/vsock:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/k8s.io/client-go/util/keyutil:go_default_library",
    ],
)

go_binary(
    name = "example-guest-agent",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
