load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["smbios.go"],
    importpath = "kubevirt.io/kubevirt/cmd/example-hook-sidecar",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/v1:go_default_library",
        "//pkg/hooks:go_default_library",
        "//pkg/hooks/info:go_default_library",
        "//pkg/hooks/v1alpha1:go_default_library",
        "//pkg/hooks/v1alpha2:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "example-hook-sidecar",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "example-hook-sidecar-image",
    base = "@fedora//image",
    directory = "/",
    entrypoint = ["/example-hook-sidecar"],
    files = [":example-hook-sidecar"],
    visibility = ["//visibility:public"],
)
