load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/kubevirt/cmd/example-node-hook-plugin",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/hooks/plugins/v1alpha1:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
    ],
)

go_binary(
    name = "example-node-hook-plugin",
    testonly = True,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "example-node-hook-plugin-tar",
    testonly = True,
    srcs = [":example-node-hook-plugin"],
    package_dir = "/usr/bin",
)

oci_image(
    name = "example-node-hook-plugin-image",
    testonly = True,
    base = "//:passwd-image",
    entrypoint = ["/usr/bin/example-node-hook-plugin"],
    tars = [":example-node-hook-plugin-tar"],
    visibility = ["//visibility:public"],
)
