load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image")

go_library(
    name = "go_default_library",
    srcs = ["sidecar_shim.go"],
    importpath = "kubevirt.io/kubevirt/cmd/sidecars",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cloud-init:go_default_library",
        "//pkg/hooks:go_default_library",
        "//pkg/hooks/info:go_default_library",
        "//pkg/hooks/v1alpha1:go_default_library",
        "//pkg/hooks/v1alpha2:go_default_library",
        "//pkg/hooks/v1alpha3:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "sidecar-shim",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)


pkg_tar(
    name = "sidecar-shim-tar",
    srcs = [":sidecar-shim"],
    package_dir = "/",
)

oci_image(
    name = "sidecar-shim-image",
    base = "//:passwd-image",
    entrypoint = ["/sidecar-shim"],
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//rpm:sidecar-shim_s390x",
            ":sidecar-shim-tar",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//rpm:sidecar-shim_aarch64",
            ":sidecar-shim-tar",
        ],
        "//conditions:default": [
            "//rpm:sidecar-shim_x86_64",
            ":sidecar-shim-tar",
        ],
    }),
    visibility = ["//visibility:public"],
)
