load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "layer_from_tar")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["sidecar_shim.go"],
    importpath = "kubevirt.io/kubevirt/cmd/sidecars",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cloud-init:go_default_library",
        "//pkg/hooks:go_default_library",
        "//pkg/hooks/info:go_default_library",
        "//pkg/hooks/v1alpha1:go_default_library",
        "//pkg/hooks/v1alpha2:go_default_library",
        "//pkg/hooks/v1alpha3:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:go_default_library",
    ],
)

go_binary(
    name = "sidecar-shim",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "sidecar-shim-tar",
    srcs = [":sidecar-shim"],
    package_dir = "/",
)

layer_from_tar(
    name = "sidecar-shim-layer",
    src = ":sidecar-shim-tar",
)

layer_from_tar(
    name = "sidecar-shim-rpm-layer-x86_64",
    src = "//rpm:sidecar-shim_x86_64",
)

layer_from_tar(
    name = "sidecar-shim-rpm-layer-aarch64",
    src = "//rpm:sidecar-shim_aarch64",
)

layer_from_tar(
    name = "sidecar-shim-rpm-layer-s390x",
    src = "//rpm:sidecar-shim_s390x",
)

image_manifest(
    name = "sidecar-shim-image",
    base = "//:passwd-image",
    entrypoint = ["/sidecar-shim"],
    layers = select({
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            ":sidecar-shim-rpm-layer-s390x",
            ":sidecar-shim-layer",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            ":sidecar-shim-rpm-layer-aarch64",
            ":sidecar-shim-layer",
        ],
        "//conditions:default": [
            ":sidecar-shim-rpm-layer-x86_64",
            ":sidecar-shim-layer",
        ],
    }),
    visibility = ["//visibility:public"],
)
